bk_ida/gccida/g1/get_func_hard_reg_initial_val
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_func_hard_reg_initial_val/src/integrate.c:3536:58: error: expected expression
hard_reg_initial_vals->entries = ( initial_value_pair_0 *)xmalloc( 0x50uLL); 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_func_hard_reg_initial_val/src/integrate.c:3536:36: error: use of undeclared identifier 'initial_value_pair_0'
hard_reg_initial_vals->entries = ( initial_value_pair_0 *)xmalloc( 0x50uLL); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_func_hard_reg_initial_val/src/integrate.c:3543:58: error: expected expression
hard_reg_initial_vals->entries = ( initial_value_pair_0 *)xrealloc( hard_reg_initial_vals->entries, 16LL * v7); 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_func_hard_reg_initial_val/src/integrate.c:3543:36: error: use of undeclared identifier 'initial_value_pair_0'
hard_reg_initial_vals->entries = ( initial_value_pair_0 *)xrealloc( hard_reg_initial_vals->entries, 16LL * v7); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_func_hard_reg_initial_val/src/integrate.c:3547:40: error: use of undeclared identifier 'machine_mode'
*( _QWORD *)( v5 + 8) = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)reg + 2)); 
                                       ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_func_hard_reg_initial_val/src/obj/integrate.o] Error 1
